	PR target/60486 	* config/avr/avr.c (avr_out_plus): Swap cc_plus and cc_minus in 	calls of avr_out_plus_1.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@208532 138bc75d-0d04-0410-961f-82ee72b054a4